--- a/aftman.toml
+++ b/aftman.toml
@@ -1,5 +1,6 @@
 # This file lists tools managed by Aftman, a cross-platform toolchain manager.
 # For more information, see https://github.com/LPGhatguy/aftman
+# pain in the ah 🥀
 
 # To add a new tool, add an entry to this table.
 [tools]
