--- a/default.project.json
+++ b/default.project.json
@@ -5,7 +5,7 @@
 	"ReplicatedStorage": {
 	  "replicated": {
 		"$className": "Folder",
-		"packages": {
+		"services": {
 		  "$className": "Folder",
 		  "customFontService": {
 			"$properties": {
